--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="user_home_donateButton">Donate Now</string>
     <string name="userDonate">Donate</string>
+    <string name="feedbackLabel">Feedback</string>
 </resources>
